--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
