--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.4",
+    "remove-accents": "^0.4.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   }
