--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Zohar Pfeffer",
   "license": "ISC",
   "dependencies": {
+    "daterangepicker": "^3.0.5",
     "express": "^4.17.1",
     "handlebars": "^4.1.2",
     "jquery": "^3.4.1",
